--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
                                 <i class="fas fa-map-marker-alt text-2xl"></i>
                             </div>
                             <h4 class="font-medium text-gray-900">Endereço</h4>
-                            <p class="text-gray-700 mt-1">Rua Exemplo, 123 - Centro, Itu/SP</p>
+                            <p class="text-gray-700 mt-1">Av Paulo Xavier de Toledo n 87, Itu, Sao Paulo, Brazil 13304240</p>
                         </div>
                         <div>
                             <div class="text-pink-500 mb-2">
                                 <i class="fas fa-phone-alt text-2xl"></i>
                             </div>
                             <h4 class="font-medium text-gray-900">Telefone</h4>
-                            <p class="text-gray-700 mt-1">(11) 9999-9999</p>
+                            <p class="text-gray-700 mt-1">(11) 995672657</p>
                         </div>
                         <div>
                             <div class="text-pink-500 mb-2">
